--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
     </header>
     <section>
         <h2>HTML</h2>
-        <p class="texto-inglês">Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</p>
+        <p>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</p>
         <h2>CSS</h2>
-        <p class="texto-inglês">Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</p>
-        <h2>Outras linguagens</h2>
-        <li id="lista">Lista</li>
+        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</p>
         <img src=" ./imagem/Olá Mundo.png" alt="ilustração de uma planeta e um texto escrito: ola mundo">
     </section>
     <footer>
         <p>Uma página desenvolvida por Alura Start</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
