--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <section>
         <h2>HTML</h2>
-        <p>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</p>
+        <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</p>
         <h2>CSS</h2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</p>
         <img src=" ./imagem/Olá Mundo.png" alt="ilustração de uma planeta e um texto escrito: ola mundo">
